--- a/android-public-sdk/gotennasdksample/gotenna-sdk/build.gradle
+++ b/android-public-sdk/gotennasdksample/gotenna-sdk/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('gotenna-sdk-release.aar'))
+artifacts.add("default", file('gotenna-sdk.aar'))
