--- a/android-public-sdk/gotennasdksample/sample/build.gradle
+++ b/android-public-sdk/gotennasdksample/sample/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
 
     lintOptions {
         abortOnError false
@@ -11,9 +11,11 @@ android {
     defaultConfig {
         applicationId "com.gotenna.sdk.sample"
         minSdkVersion 18
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        missingDimensionStrategy 'version', 'limited'
+        missingDimensionStrategy 'server', 'production'
     }
 
     signingConfigs {
@@ -35,9 +37,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile project(':gotenna-sdk')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+
+    implementation project(':gotenna-sdk')
 }
